# desafio-mailerweb-ino

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4bf4a86e9c12_add_booking_overlap_exclusion_constraint.py  d8382f815670_add_booking_validation_constraints.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: enums.py  session.py
backend/app/db/models/: __init__.py  booking.py  outbox_event.py  user.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/bookings/: __init__.py  constants.py  router.py  schemas.py  service.py
backend/app/modules/rooms/: router.py  schemas.py  service.py
backend/app/worker/: mailer.py  notifications.py  processor.py
backend/scripts/: seed_initial_user.py
backend/tests/: conftest.py  test_auth_protection.py  test_bookings.py  test_mailer.py  test_notifications.py  test_outbox.py  test_rooms.py  test_worker.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts  helpers.ts
frontend/src/: App.css  App.integration.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: BookingFormPage.test.tsx  BookingFormPage.tsx  BookingsPage.test.tsx  BookingsPage.tsx  DashboardPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RoomsPage.test.tsx  RoomsPage.tsx
frontend/src/test/: setup.ts  (+1 more)
(+11 files in other folders)
