[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["denny-erikson <denny.erikson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.0"
uvicorn = "^0.44.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
psycopg = {extras = ["binary"], version = "^3.3.3"}
pydantic-settings = "^2.13.1"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
